Bug 446290 - Gwenview Importer has wayland generic icon in task manager and title bar
Summary: Gwenview Importer has wayland generic icon in task manager and title bar
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: importer (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-30 17:16 UTC by Patrick Silva
Modified: 2022-01-08 19:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (100.64 KB, image/png)
2021-11-30 17:16 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-11-30 17:16:23 UTC
Created attachment 144090 [details]
screenshot

STEPS TO REPRODUCE
1. use Wayland session
2. connect an Android phone or another PTP device to usb port
3. set usb mode of your device to PTP
4. click on Disks & Devices applet in system tray
5. click on your device and choose 'Download Photos with Gwenview'

OBSERVED RESULT
Gwenview Importer opens, it has wayland generic icon in task manager and title bar.
Please see the attached screenshot.

EXPECTED RESULT
Gwenview icon

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 5.23.3
KDE Frameworks Version:  5.88
Qt Version: 5.15.2
Comment 1 Bug Janitor Service 2021-12-18 18:21:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/126
Comment 2 Nicolas Fella 2022-01-08 19:55:30 UTC
Git commit 9231196370a97ce85e20b1782d6903c81fe5551b by Nicolas Fella.
Committed on 08/01/2022 at 19:49.
Pushed by nicolasfella into branch 'master'.

Add proper desktop file for importer

This is needed to properly indentify the application and e.g. display the right icon in the task manager

The desktop file has NoDisplay=true since we don't want people launching the importer from the start menu

M  +2    -0    importer/CMakeLists.txt
M  +1    -1    importer/main.cpp
A  +8    -0    importer/org.kde.gwenview_importer.desktop

https://invent.kde.org/graphics/gwenview/commit/9231196370a97ce85e20b1782d6903c81fe5551b