Add proper desktop file for importer

This is needed to properly indentify the application and e.g. display the right icon in the task manager

The desktop file has NoDisplay=true since we don't want people launching the importer from the start menu

BUG: 446290